--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -50,11 +50,6 @@
    "id": "0767b203-ad69-428f-b8c1-50ceab758b35",
    "metadata": {},
    "source": [
-    "<Admonition type=\"caution\">\n",
-    "  - There are some limitations of classical feedforward and control flow operations on quantum hardware that might impact your program. For more information, see [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations).\n",
-    "  - See the [QASM3 feature table](/docs/guides/qasm-feature-table) to determine which features are supported on Qiskit and Qiskit Runtime.\n",
-    "</Admonition>\n",
-    "\n",
     "## If statement\n",
     "\n",
     "The if statement is used to conditionally perform operations based on the value of a classical bit or register.\n",
@@ -294,11 +289,45 @@
    "source": [
     "## Limitations\n",
     "\n",
-    "Be aware of the following constraints when using dynamic circuits:\n",
+    "Be aware of the following constraints when using dynamic circuits.  Note that as new features and improvements are added throughout the coming year, some of these limitations will be lifted.\n",
     "\n",
-    "- Whenever you do a measure followed by an `if (c)`, the values that are measured and subsequently used in the if condition has a limit of **60 bits**.\n",
     "- Nested conditionals are not allowed.\n",
-    "- Having `reset` inside conditionals is not supported."
+    "- Having `reset` inside conditionals is not supported.\n",
+    "- The `ClassicalRegister` used in an `if_test` condition cannot be of more than 32 bits.\n",
+    "   For example, the following code block will not work because `c` is more than 32 bits:\n",
+    "\n",
+    "   ```python\n",
+    "   c = ClassicalRegister(156)\n",
+    "   q = QuantumRegister(156)\n",
+    "   circ = QuantumCircuit(q, c)\n",
+    "   ...\n",
+    "   circ.measure(q[100], c[100])\n",
+    "   with circ.if_test((c[100], 1)):\n",
+    "   circ.x(q[101])\n",
+    "   ```\n",
+    "\n",
+    "   Instead, you could use the following:\n",
+    "\n",
+    "   ```python\n",
+    "   c1 = ClassicalRegister(1, \"c1\")\n",
+    "   c2 = ClassicalRegister(2, \"c2\")\n",
+    "   c = ClassicalRegister(156, \"c\") # for terminal measurements...\n",
+    "   q = QuantumRegister(156)\n",
+    "   circ = QuantumCircuit(q, c1, c2, c)\n",
+    "   ...\n",
+    "   # mid-circuit measurements in small registers (in this case, 1-bit)\n",
+    "   circ.measure(q[50], c1)\n",
+    "   circ.measure(q[100], c2)\n",
+    "   with circ.if_test((c1, 1)):\n",
+    "      ...\n",
+    "   with circ.if_test((c2, 1)):\n",
+    "      ...\n",
+    "    ...\n",
+    "   # terminal measurements\n",
+    "   circ.measure(q, c)\n",
+    "   ```\n",
+    "- See [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations) for other limitations that might impact your program. \n",
+    "- See the [QASM3 feature table](/docs/guides/qasm-feature-table) to determine which features are supported on Qiskit and Qiskit Runtime.   "
    ]
   },
   {
