--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -31,25 +31,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67b2704d-aa3d-4e39-b417-536093be274e",
-   "metadata": {},
-   "source": [
-    "Dynamic circuits are powerful tools that let us measure qubits in the middle of a quantum circuit execution and then perform classical logical operations within the circuit, based on the outcome of those mid-circuit measurements.  This process is also known as _classical feedforward_. While we are still in the early days of understanding how best to take advantage of dynamic circuits, the quantum research community has already identified a number of use cases, such as the following:\n",
-    "\n",
-    "* Efficient quantum state preparation, such as [W-state](https://arxiv.org/pdf/2412.07969) and [MPS state](https://arxiv.org/abs/2404.16083)\n",
-    "* [Efficient long-range entanglement](https://journals.aps.org/prxquantum/abstract/10.1103/PRXQuantum.5.030339) between qubits on the same chip by using shallow circuits\n",
-    "* Efficient [sampling of IQP-like circuits](https://arxiv.org/pdf/2505.04705)\n",
-    "\n",
-    "These improvements brought by dynamic circuits, however, come with trade-offs. Mid-circuit measurements and classical operations typically have longer execution time than two-qubit gates, and this increase in time might negate the benefits of reduced circuit depth. Therefore, reducing the length of mid-circuit measurement is a focus area of improvement as IBM Quantum rolls out the [new version](/announcements/product-updates/2025-03-03-new-version-dynamic-circuits) of dynamic circuits.\n",
-    "\n",
-    "The [OpenQASM3 specification](https://openqasm.com/language/classical.html#looping-and-branching) defines a number of conditional instructions, but Qiskit Runtime currently only supports the [if_test](/docs/api/qiskit/qiskit.circuit.QuantumCircuit#if_test) statement, which can be used as a method on [QuantumCircuit.](/docs/api/qiskit/qiskit.circuit.QuantumCircuit) This methods returns a [context manager](https://docs.python.org/3/reference/datamodel.html#with-statement-context-managers) and is typically used in a `with` statement. This guide describes how to use this conditional statement."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0767b203-ad69-428f-b8c1-50ceab758b35",
    "metadata": {},
    "source": [
+    "<Admonition type=\"caution\" title=\"Deprecations to accelerate the new version of dynamic circuits\">\n",
+    "\n",
+    "Starting 2 June 2025 and continuing through the year, IBM Quantum&reg; will begin a gradual rollout of new features to dynamic circuits that will enable them at the utility scale. See the [announcement](/announcements/product-updates/2025-03-03-new-version-dynamic-circuits) for more details.\n",
+    "\n",
+    "To accelerate the rollout, the following have been deprecated:\n",
+    "\n",
+    "- The `while`, `for`, and `switch` control flow constructs\n",
+    "- The ability to use control flow instructions inside the body of a branch (as in, nested control flow)\n",
+    "- Conditional measurements\n",
+    "\n",
+    "To check whether a specific QPU supports dynamic circuits, use this code:\n",
+    "```python\n",
+    "# returns True if backend supports dynamic circuits\n",
+    "\"dynamic_circuits\" in backend.configuration().supported_features\n",
+    "```\n",
+    "</Admonition>\n",
+    "\n",
+    "This guide demonstrates the functionality available in the Qiskit SDK for performing classical feedforward and control flow. These features are sometimes referred to collectively as \"dynamic circuits.\" Classical feedforward refers to the ability to measure qubits in the middle of a circuit and perform additional quantum operations that depend on the measurement outcome. Qiskit supports four control flow constructs for classical feedforward, each implemented as a method on [`QuantumCircuit`](../api/qiskit/qiskit.circuit.QuantumCircuit). The constructs and their corresponding methods are:\n",
+    "\n",
+    "- If statement - [`QuantumCircuit.if_test`](../api/qiskit/qiskit.circuit.QuantumCircuit#if_test)\n",
+    "- Switch statement - [`QuantumCircuit.switch`](../api/qiskit/qiskit.circuit.QuantumCircuit#switch)\n",
+    "- For loop - [`QuantumCircuit.for_loop`](../api/qiskit/qiskit.circuit.QuantumCircuit#for_loop)\n",
+    "- While loop - [`QuantumCircuit.while_loop`](../api/qiskit/qiskit.circuit.QuantumCircuit#while_loop)\n",
+    "\n",
+    "Each of these methods returns a [context manager](https://docs.python.org/3/reference/datamodel.html#with-statement-context-managers) and is typically used in a `with` statement. In the rest of this guide, we will explain each of these constructs and how to use them.\n",
+    "\n",
+    "<Admonition type=\"caution\">\n",
+    "  There are some limitations of classical feedforward and control flow operations on quantum hardware that might impact your program. For more information, see [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations).\n",
+    "</Admonition>\n",
+    "\n",
     "## If statement\n",
     "\n",
     "The if statement is used to conditionally perform operations based on the value of a classical bit or register.\n",
@@ -188,146 +202,196 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86219c0c-4b81-405d-8cb9-3fbe00353832",
+   "id": "ce92fa5f-6b30-4b4c-aa37-5d894e4a40db",
    "metadata": {},
    "source": [
-    "## Classical expressions\n",
+    "## Switch statement\n",
     "\n",
-    "The Qiskit classical expression module [`qiskit.circuit.classical`](/docs/api/qiskit/circuit_classical) contains an exploratory representation of runtime operations on classical values during circuit execution. Currently, only simple expressions on bits and registers that result in a Boolean value are supported, and these are only valid for use in the condition of `QuantumCircuit.if_test()` (`IfElseOp`).\n",
-    "\n",
-    "The following example shows you can use the calculation of the parity to create an n-qubit GHZ state using dynamic circuits. First, generate $n/2$ Bell pairs on\n",
-    "adjacent qubits. Then, glue these pairs together using a layer of CNOT gates in between pairs. You then measure the target qubit of all prior CNOT gates and reset each measured qubit to the state $\\vert 0 \\rangle$. You apply $X$ to every unmeasured site for which the parity of all preceding bits is odd. Finally, CNOT gates are applied to the measured qubits to re-establish the entanglement lost in the measurement.\n",
-    "\n",
-    "\n",
-    "In the parity calculation, the first element of the constructed expression involves lifting the Python object `mr[0]`to a [`Value`](/docs/api/qiskit/circuit_classical#value)  node. This is not necessary for `mr[1]` and the possible following classical register, as they are inputs to `expr.bit_xor`, and any necessary lifting is done automatically in these cases. Such expressions can be built up in loops and other constructs."
+    "The switch statement is used to select actions based on the value of a classical bit or register. It is similar to an if statement, but allows one to specify more cases for the branching logic. In the example below, we apply a Hadamard gate to a qubit and measure it. If the result is 0, we apply an X gate on the qubit, and if the result is 1, we apply a Z gate. The resulting measurement outcome should be 1 with 100% probability."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "42454b75-8e80-4e22-9d3b-ec85746e0550",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from qiskit import QuantumCircuit, QuantumRegister, ClassicalRegister\n",
-    "from qiskit.circuit.classical import expr\n",
-    "\n",
-    "num_qubits = 8\n",
-    "if num_qubits % 2 or num_qubits < 4:\n",
-    "    raise ValueError(\"num_qubits must be an even integer ≥ 4\")\n",
-    "meas_qubits = list(range(2, num_qubits, 2))  # qubits to measure and reset\n",
-    "\n",
-    "qr = QuantumRegister(num_qubits, \"qr\")\n",
-    "mr = ClassicalRegister(len(meas_qubits), \"m\")\n",
-    "qc = QuantumCircuit(qr, mr)\n",
-    "\n",
-    "# Create local Bell pairs\n",
-    "qc.reset(qr)\n",
-    "qc.h(qr[::2])\n",
-    "for ctrl in range(0, num_qubits, 2):\n",
-    "    qc.cx(qr[ctrl], qr[ctrl + 1])\n",
-    "\n",
-    "# Glue neighboring pairs\n",
-    "for ctrl in range(1, num_qubits - 1, 2):\n",
-    "    qc.cx(qr[ctrl], qr[ctrl + 1])\n",
-    "\n",
-    "# Measure boundary qubits between pairs,reset to 0\n",
-    "for k, q in enumerate(meas_qubits):\n",
-    "    qc.measure(qr[q], mr[k])\n",
-    "    qc.reset(qr[q])\n",
-    "\n",
-    "# Parity-conditioned X corrections\n",
-    "# Each non-measured qubit gets flipped iff the parity (XOR) of all\n",
-    "# preceding measurement bits is 1\n",
-    "for tgt in range(num_qubits):\n",
-    "    if tgt in meas_qubits:  # skip measured qubits\n",
-    "        continue\n",
-    "    # all measurement registers whose physical qubit index < tgt\n",
-    "    left_bits = [k for k, q in enumerate(meas_qubits) if q < tgt]\n",
-    "    if not left_bits:  # skip if list empty\n",
-    "        continue\n",
-    "\n",
-    "    # build XOR-parity expression\n",
-    "    parity = expr.lift(mr[left_bits[0]])  # lift the first bit to Value\n",
-    "    for k in left_bits[1:]:\n",
-    "        parity = expr.bit_xor(\n",
-    "            mr[k], parity\n",
-    "        )  # calculate parity with all other bits\n",
-    "    with qc.if_test(parity):  # Add X if parity is 1\n",
-    "        qc.x(qr[tgt])\n",
-    "\n",
-    "# Re-entangle measured qubits\n",
-    "for ctrl in range(1, num_qubits - 1, 2):\n",
-    "    qc.cx(qr[ctrl], qr[ctrl + 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "3bdb923d-c466-4743-99b1-d46fda9660ef",
+   "execution_count": 4,
+   "id": "6725ba53-c33e-479b-9413-ef3d55a8448c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/guides/classical-feedforward-and-control-flow/extracted-outputs/3bdb923d-c466-4743-99b1-d46fda9660ef-0.avif\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/guides/classical-feedforward-and-control-flow/extracted-outputs/6725ba53-c33e-479b-9413-ef3d55a8448c-0.svg\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qc.draw(output=\"mpl\", style=\"iqp\", idle_wires=False, fold=-1)"
+    "qubits = QuantumRegister(1)\n",
+    "clbits = ClassicalRegister(1)\n",
+    "circuit = QuantumCircuit(qubits, clbits)\n",
+    "(q0,) = qubits\n",
+    "(c0,) = clbits\n",
+    "\n",
+    "circuit.h(q0)\n",
+    "circuit.measure(q0, c0)\n",
+    "with circuit.switch(c0) as case:\n",
+    "    with case(0):\n",
+    "        circuit.x(q0)\n",
+    "    with case(1):\n",
+    "        circuit.z(q0)\n",
+    "circuit.measure(q0, c0)\n",
+    "\n",
+    "circuit.draw(\"mpl\")\n",
+    "\n",
+    "# example output counts: {'1': 1024}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0378a45f-7a28-48bc-993d-0e4308d38bfc",
+   "id": "a95e44eb-e54a-4ba7-bbc5-da0cc1f9df9a",
    "metadata": {},
    "source": [
-    "## Limitations\n",
+    "Because the example above used a single classical bit, there were only two possible cases, so we could have achieved the same result using an if-else statement. The switch case is mainly useful when branching on the value of a classical register composed of multiple bits, as demonstrated in the following example. Here, we also show how to construct a default case, which is executed if none of the preceding cases are. Note that in a switch statement, only one of the blocks are ever executed. There is no fallthrough.\n",
     "\n",
-    "Be aware of the following constraints when using dynamic circuits.  Note that as new features and improvements are added throughout the coming year, some of these limitations will be lifted.\n",
+    "In the example below, we apply Hadamard gates to two qubits and measure them. If the result is either 00 or 11, we apply a Z gate to the third qubit. If the result is 01, we apply a Y gate. If none of the preceding cases matched, we apply an X gate. Finally, measure the third qubit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8bb350f1-fd66-4ef2-89b4-6168e6ad04b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/docs/images/guides/classical-feedforward-and-control-flow/extracted-outputs/8bb350f1-fd66-4ef2-89b4-6168e6ad04b0-0.svg\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qubits = QuantumRegister(3)\n",
+    "clbits = ClassicalRegister(3)\n",
+    "circuit = QuantumCircuit(qubits, clbits)\n",
+    "(q0, q1, q2) = qubits\n",
+    "(c0, c1, c2) = clbits\n",
     "\n",
-    "- Nested conditionals are not allowed.\n",
-    "- Having `reset` inside conditionals is not supported.\n",
-    "- The `ClassicalRegister` used in an `if_test` condition cannot be of more than 32 bits.\n",
-    "   For example, the following code block will not work because `c` is more than 32 bits:\n",
+    "circuit.h([q0, q1])\n",
+    "circuit.measure(q0, c0)\n",
+    "circuit.measure(q1, c1)\n",
+    "with circuit.switch(clbits) as case:\n",
+    "    with case(0b000, 0b011):\n",
+    "        circuit.z(q2)\n",
+    "    with case(0b001):\n",
+    "        circuit.y(q2)\n",
+    "    with case(case.DEFAULT):\n",
+    "        circuit.x(q2)\n",
+    "circuit.measure(q2, c2)\n",
     "\n",
-    "   ```python\n",
-    "   c = ClassicalRegister(156)\n",
-    "   q = QuantumRegister(156)\n",
-    "   circ = QuantumCircuit(q, c)\n",
-    "   ...\n",
-    "   circ.measure(q[100], c[100])\n",
-    "   with circ.if_test((c[100], 1)):\n",
-    "   circ.x(q[101])\n",
-    "   ```\n",
+    "circuit.draw(\"mpl\")\n",
     "\n",
-    "   Instead, you could use the following:\n",
+    "# example output counts: {'101': 267, '110': 249, '011': 265, '000': 243}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be30c6ab-6aa6-4b06-8322-fecb9500ec6e",
+   "metadata": {},
+   "source": [
+    "## For loop\n",
     "\n",
-    "   ```python\n",
-    "   c1 = ClassicalRegister(1, \"c1\")\n",
-    "   c2 = ClassicalRegister(2, \"c2\")\n",
-    "   c = ClassicalRegister(156, \"c\") # for terminal measurements...\n",
-    "   q = QuantumRegister(156)\n",
-    "   circ = QuantumCircuit(q, c1, c2, c)\n",
-    "   ...\n",
-    "   # mid-circuit measurements in small registers (in this case, 1-bit)\n",
-    "   circ.measure(q[50], c1)\n",
-    "   circ.measure(q[100], c2)\n",
-    "   with circ.if_test((c1, 1)):\n",
-    "      ...\n",
-    "   with circ.if_test((c2, 1)):\n",
-    "      ...\n",
-    "    ...\n",
-    "   # terminal measurements\n",
-    "   circ.measure(q, c)\n",
-    "   ```\n",
-    "- See [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations) for other limitations that might impact your program. \n",
-    "- See the [QASM3 feature table](/docs/guides/qasm-feature-table) to determine which features are supported on Qiskit and Qiskit Runtime.   "
+    "A for loop is used to iterate over a sequence of classical values and perform some operations during each iteration.\n",
+    "\n",
+    "In the example below, we use a for loop to apply 5 X gates to a qubit and then measure it. Because we perform an odd number of X gates, the overall effect is to flip the qubit from the 0 state to the 1 state."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "af3ae593-b759-4b7b-86fc-9b6731a6cfd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/docs/images/guides/classical-feedforward-and-control-flow/extracted-outputs/af3ae593-b759-4b7b-86fc-9b6731a6cfd8-0.svg\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qubits = QuantumRegister(1)\n",
+    "clbits = ClassicalRegister(1)\n",
+    "circuit = QuantumCircuit(qubits, clbits)\n",
+    "(q0,) = qubits\n",
+    "(c0,) = clbits\n",
+    "\n",
+    "with circuit.for_loop(range(5)) as _:\n",
+    "    circuit.x(q0)\n",
+    "circuit.measure(q0, c0)\n",
+    "\n",
+    "circuit.draw(\"mpl\")\n",
+    "\n",
+    "# example output counts: {'1': 1024}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f1050b0-58a5-46e1-95c6-980db3f09c00",
+   "metadata": {},
+   "source": [
+    "## While loop\n",
+    "\n",
+    "A while loop is used to repeat instructions while some condition is satisfied.\n",
+    "\n",
+    "In the example below, we apply Hadamard gates to two qubits and measure them. Then, we create a while loop that repeats this procedure while the measurement outcome is 11. As a result, the final measurement should never be 11, with the remaining possibilities appearing with approximately equal frequency."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "95795aa7-9d4d-4c35-ba0e-48e6ba4f41b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/docs/images/guides/classical-feedforward-and-control-flow/extracted-outputs/95795aa7-9d4d-4c35-ba0e-48e6ba4f41b9-0.svg\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qubits = QuantumRegister(2)\n",
+    "clbits = ClassicalRegister(2)\n",
+    "circuit = QuantumCircuit(qubits, clbits)\n",
+    "\n",
+    "q0, q1 = qubits\n",
+    "c0, c1 = clbits\n",
+    "\n",
+    "circuit.h([q0, q1])\n",
+    "circuit.measure(q0, c0)\n",
+    "circuit.measure(q1, c1)\n",
+    "with circuit.while_loop((clbits, 0b11)):\n",
+    "    circuit.h([q0, q1])\n",
+    "    circuit.measure(q0, c0)\n",
+    "    circuit.measure(q1, c1)\n",
+    "\n",
+    "circuit.draw(\"mpl\")\n",
+    "\n",
+    "# example output counts: {'01': 334, '10': 368, '00': 322}"
    ]
   },
   {
@@ -339,7 +403,6 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "-  See an example of dynamic circuits in the [Repeat until success](/docs/tutorials/repeat-until-success) tutorial.\n",
-    "- Learn about [Deferred timing resolution using stretch](/docs/guides/stretch)\n",
     "- For considerations and limitations related to running dynamic circuits on quantum hardware, see the [Hardware considerations and limitations for classical feedforward and control flow](/docs/guides/dynamic-circuits-considerations) guide.\n",
     "-  Review the [circuit library API](/docs/api/qiskit/circuit_library) reference.\n",
     "</Admonition>"
