--- a/docs/guides/choose-execution-mode.mdx
+++ b/docs/guides/choose-execution-mode.mdx
@@ -3,7 +3,7 @@ title: Choose the right execution mode
 description: Choose the right execution mode for Qiskit Runtime - sessions, batch, or single job.
 
 ---
-<span id="sessions-versus-batch-usage" />
+<span id="sessions-versus-batch-usage"></span>
 # Choose the right execution mode
 
 Utility-scale workloads can take many hours to complete, so it is important that both the classical and quantum resources are scheduled efficiently to streamline the execution. Execution modes provide flexibility in balancing the cost and time tradeoff to use resources optimally for your workloads. There are several aspects to consider when choosing which execution mode to use, such as overall execution time (maximum time to live, or TTL) and time between jobs (interactive TTL).
