update toc and checkPatternsIndex

--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -1,5 +1,5 @@
 ---
-title: Manage cost on paid Plans
+title: Manage cost on paid plans
 description: How to manage costs of running jobs on QPUs when using the Premium, Flex, or Pay-As-You-Go Plan on IBM Quantum Platform.
 
 ---
