--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -291,7 +291,24 @@
     "\n",
     "Be aware of the following constraints when using dynamic circuits.  Note that as new features and improvements are added throughout the coming year, some of these limitations will be lifted.\n",
     "\n",
-    "- Nested conditionals are not allowed.\n",
+    "- Nested conditionals are not allowed. For example, the following code block will not work because it has an `if_test` inside another `if_test`:\n",
+    "   ```python\n",
+    "   c1 = ClassicalRegister(1, \"c1\")\n",
+    "   c2 = ClassicalRegister(2, \"c2\")\n",
+    "   ...\n",
+    "   with circ.if_test((c1, 1)):\n",
+    "        with circ.if_test(c2, 1)):\n",
+    "             ...\n",
+    "   ```\n",
+    "\n",
+    "   Instead, you could use the following:\n",
+    "\n",
+    "   ```python\n",
+    "   cr = ClassicalRegister(2)\n",
+    "   ...\n",
+    "   with circuit.if_test((cr, 0b11)):\n",
+    "    ...\n",
+    "   ```\n",
     "- Having `reset` inside conditionals is not supported.\n",
     "- The `ClassicalRegister` used in an `if_test` condition cannot be of more than 32 bits.\n",
     "   For example, the following code block will not work because `c` is more than 32 bits:\n",
