--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -135,7 +135,7 @@
     "import qiskit\n",
     "\n",
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
-    " \n",
+    "\n",
     "catalog = QiskitFunctionsCatalog(\n",
     "    channel=\"ibm_cloud\",\n",
     "    instance=\"USER_CRN\",\n",
@@ -334,7 +334,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"The estimated QPU time for this PUB is: \\n{time_estimate_result[0].metadata}\")"
+    "print(\n",
+    "    f\"The estimated QPU time for this PUB is: \\n{time_estimate_result[0].metadata}\"\n",
+    ")"
    ]
   },
   {
@@ -355,14 +357,18 @@
     "results = result[0]\n",
     "print(f\"Mitigated expectation values: \\n{results.data.evs}\")\n",
     "print(f\"Mitigated error-bar: \\n{results.data.stds}\")\n",
-    "noisy_results = results.metadata['noisy_results']\n",
+    "noisy_results = results.metadata[\"noisy_results\"]\n",
     "print(f\"Noisy expectation values: \\n{noisy_results.evs}\")\n",
     "print(f\"Noisy error-bar: \\n{noisy_results.stds}\")\n",
     "print(f\"Total QPU time: \\n {results.metadata['total_qpu_time']}\")\n",
-    "print(f\"Gates fidelity measured during the experiment: \\n {results.metadata['gate_fidelities']}\")\n",
-    "print(f\"Total shots / mitigation shots: \\n {results.metadata['total_shots']} / {results.metadata['mitigation_shots']}\")\n",
+    "print(\n",
+    "    f\"Gates fidelity measured during the experiment: \\n {results.metadata['gate_fidelities']}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"Total shots / mitigation shots: \\n {results.metadata['total_shots']} / {results.metadata['mitigation_shots']}\"\n",
+    ")\n",
     "print(\"Transpiled circuits:\")\n",
-    "for i, circuit in enumerate(results.metadata['transpiled_circs']):\n",
+    "for i, circuit in enumerate(results.metadata[\"transpiled_circs\"]):\n",
     "    print(f\"Circuit {i}:\")\n",
     "    print(f\"  Circuit: \\n {circuit['circuit']}\")\n",
     "    print(f\"  Qubit mapping: \\n {circuit['qubit_map']}\")\n",
