Added back all John Watrous's slides.

--- a/learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/introduction.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/introduction.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "In the following video, John Watrous steps you through the content in this lesson on correcting quantum errors. Alternatively, you can open the [YouTube video](https://youtu.be/OoQSdcKAIZc?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on correcting quantum errors. Alternatively, you can open the [YouTube video](https://youtu.be/OoQSdcKAIZc?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window. [Download the slides](https://ibm.box.com/s/namkqjmvu2rbldsikb2gb61bwocuu872) for this lesson.\n",
     "\n",
     "<IBMVideo id=\"134082557\" title=\"In this video, John Watrous starts by discussing classical repetition codes and then extends some of the ideas to quantum repetition codes. Approaches are combined to yield the 9-qubit Shor code.\"/>"
    ]
